small changes to be more similar to the protein identification index library. Deletes previous serial indexer